# My_Coffe_Website

./: forms.py  main.py  pyproject.toml  requirements.txt
instance/: cafes.db
static/css/: add_coffe_shop.css  coffee_shop_page.css  cover_page.css  london_page.css
templates/: add_coffe_shop.html  base.html  coffee_shop.html  cover_page.html  footer.html  header.html  london.html
