[tool.poetry]
name = "my-coffe-website"
version = "0.1.0"
description = ""
authors = ["Michał <m.krepiniewicz@gmail.com>"]
readme = "README.md"
packages = [{include = "my_coffe_website"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
